// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`report create report with lib name 1`] = `
"{
  \\"name\\": \\"@yandex-lego/components\\",
  \\"categories\\": [],
  \\"changed\\": [
    {
      \\"name\\": \\"Attach\\"
    }
  ],
  \\"components-cost-development\\": {
    \\"total\\": 0,
    \\"components\\": []
  }
}"
`;

exports[`report create report with spent story points 1`] = `
"{
  \\"name\\": \\"@yandex-lego/components\\",
  \\"categories\\": [],
  \\"changed\\": [
    {
      \\"name\\": \\"Attach\\"
    }
  ],
  \\"components-cost-development\\": {
    \\"total\\": 40,
    \\"components\\": []
  }
}"
`;

exports[`report create report with story points and date 1`] = `
"{
  \\"name\\": \\"@yandex-lego/components\\",
  \\"date\\": \\"2020-01-01\\",
  \\"categories\\": [
    {
      \\"name\\": \\"test\\",
      \\"value\\": \\"test\\"
    }
  ],
  \\"changed\\": [
    {
      \\"name\\": \\"Attach\\"
    }
  ],
  \\"components-cost-development\\": {
    \\"total\\": 16,
    \\"components\\": []
  }
}"
`;

exports[`report create report without lib name 1`] = `
"{
  \\"categories\\": [],
  \\"changed\\": [
    {
      \\"name\\": \\"Attach\\"
    }
  ],
  \\"components-cost-development\\": {
    \\"total\\": 0,
    \\"components\\": []
  }
}"
`;
